# BachelorProject

./: .gitignore  CMakeLists.txt
MCUs/Atinity25/: main_atinity.c
MCUs/Cob/: main_cob.c
MCUs/ESP32/: main_esp.c
MCUs/Greenpak/: main_greenpak.c
MCUs/Lattice_SPLD/: main_lattice.c
MCUs/PIC16F/: main_pic16f.c
MCUs/STM32/: main_stm32.c
MCUs/STM8/: main_stm8.c
src/: main.c
